# SimpleWebServer-RS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  UPDATE_CHECKLIST.md  build.rs  cargo  clippy.toml  index.html.bak  whythis.md
exploits/: README.md  exploit-0.0.1.sh  exploit-0.1.0.py  exploit-2.2.0.sh  exploit-2.2.1.sh
src/: dirlist.html  main.rs
tests/: test_server.rs
