[package]
name = "SimpleWebServer"
version = "0.1.1"
edition = "2024"
license = "GPL-3"
repository = "https://github.com/Jacoblightning/SimpleWebServer-RS"
keywords = ["webserver", "web", "server", "simple"]
categories = ["web-programming::http-server"]
description = "A very simple web server for hosting html files."
resolver = "3"


[dependencies]
# For argument parsing
clap = { version = "4.5.36", features = ["derive"] }
# For Logging
simplelog = { version = "^0.12.2", features = ["paris"] }
# For log config. Needed even though it shows as unused
time = "0.3.41"
# For rate-limiting
chrono = "0.4.40"
# For request parsing
regex = "1.11.1"
# For using regex in a loop
once_cell = "1.21.3"

# For testing
[dev-dependencies]
libc = "0.2.172"
fastrand = "2.3.0"
