[package]
name = "simplewebserver_rs"
version = "2.2.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Jacoblightning/SimpleWebServer-RS"
keywords = ["webserver", "web", "server", "simple"]
categories = ["web-programming::http-server"]
description = "A very simple web server for hosting html files."
resolver = "3"
exclude = [
    "exploits/",
    "tests",
    "clippy.toml",
    "TODO.md",
    "UPDATE_CHECKLIST.md",
    ".idea",
    ".github",
    ".pre-commit-config.yaml",
    ".gitignore"
]

[dependencies]
# For argument parsing
clap = { version = "^4.5.36", features = ["derive"] }
# For Logging
simplelog = { version = "^0.12.2", features = ["paris"] }
# For log config and Rate Limiting
time = "^0.3.41"
# For request parsing
regex = "^1.11.1"

# Windows
#clap_derive = "4.5.45"
#time-macros = "0.2.23"

# For testing
[dev-dependencies]
port_check = "^0.3.0"
